2003-04-18  Rodney Dawes  <dobey@ximian.com>

	[#21499]

	* Makefile.am:
	* e-summary-factory.c:
	Use PREFIX instead of EVOLUTION_DATADIR for bonobo_ui_util_set_ui ()
	
2003-04-16  Ettore Perazzoli  <ettore@ximian.com>

	[#39693]

	* e-summary-shown.c (SPEC): Sort by the first column.

2003-04-16  Ettore Perazzoli  <ettore@ximian.com>

	[#40902]

	* e-summary-preferences.c: Removed members new_url_entry,
	new_name_entry from struct PropertyData.
	(rdf_new_url_clicked_cb): Port to
	GtkDialog and fix button order.  Also, use gtk_dialog_run()
	instead of using callbacks.
	(add_dialog_clicked_cb): Removed.

2003-04-12  Rodney Dawes  <dobey@ximian.com>

	* e-summary-shown.c: Remove construct_pixmap_button (), use stock
	buttons.
	
2003-04-09  Larry Ewing  <lewing@ximian.com>

	* e-summary.c (e_summary_init): remove call to
	gtkhtml_set_default_background_color

2003-04-08  Not Zed  <NotZed@Ximian.com>

	* GNOME_Evolution_Summary.server.in.in: Properly terminate the
	"name" attribute tag added in the last change.

2003-04-07  Dan Winship  <danw@ximian.com>

	* Locations: Add Darwin, Australia [#12066]. Fix Vilnius
	and Riga [#15740]. Fix spelling of Gardermoen, Norway [#18015].
	Add Goetsenhoven and Spa, Belgium [#32027]

	* GNOME_Evolution_Summary.server.in.in: clean up server names

2003-03-31  Larry Ewing  <lewing@ximian.com>

	* e-summary-factory.c: make the verbs static so they don't enter
	the global namespace.

2003-03-27  Ettore Perazzoli  <ettore@ximian.com>

	[#40358]

	* e-summary.c (e_summary_init): Likewise.

	* e-summary-weather.c (e_summary_weather_get_html): Likewise.
	(weather_make_html): Likewise.

	* e-summary-mail.c (e_summary_mail_generate_html): Fix so it
	handles the fact that the translated strings are already in UTF8.
	* e-summary-rdf.c (tree_walk): Likewise.
	(display_doc): Likewise.

2003-03-27  Not Zed  <NotZed@Ximian.com>

	** see bug #40141
	
	* e-summary-preferences.c (config_control_destroy_cb): Dont save